[gd_scene load_steps=12 format=3 uid="uid://bfsumuu8jwoqr"]

[ext_resource type="FontFile" uid="uid://e8o0dvapgj8v" path="res://assets/fonts/ComicNeueSansID.ttf" id="1_cdh0q"]
[ext_resource type="Script" uid="uid://dfkh6k521v0f4" path="res://scripts/ui/pause_menu.gd" id="1_g03ps"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g03ps"]
bg_color = Color(0.490196, 0.917647, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gqsfd"]
bg_color = Color(0.168627, 0.690196, 0.839216, 1)
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k73r7"]
bg_color = Color(0.298039, 0.811765, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_64vob"]
bg_color = Color(0.490196, 0.917647, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kmrld"]
bg_color = Color(0.168627, 0.690196, 0.839216, 1)
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_66x1r"]
bg_color = Color(0.298039, 0.811765, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1vbj4"]
bg_color = Color(0.490196, 0.917647, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wb136"]
bg_color = Color(0.168627, 0.690196, 0.839216, 1)
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_evmab"]
bg_color = Color(0.298039, 0.811765, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_offset = Vector2(3, 3)

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_g03ps")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 2012.0
offset_bottom = 933.0
color = Color(0.00392157, 0.00392157, 0.00392157, 0.592157)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 154.0
offset_top = 202.0
offset_right = 973.0
offset_bottom = 392.0
theme_override_constants/separation = 20

[node name="button_continuar" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_cdh0q")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_g03ps")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gqsfd")
theme_override_styles/normal = SubResource("StyleBoxFlat_k73r7")
text = "Continuar"

[node name="button_menu_principal" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_cdh0q")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_64vob")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kmrld")
theme_override_styles/normal = SubResource("StyleBoxFlat_66x1r")
text = "Menu principal"

[node name="button_sair" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_cdh0q")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_1vbj4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wb136")
theme_override_styles/normal = SubResource("StyleBoxFlat_evmab")
text = "Sair"

[connection signal="pressed" from="ColorRect/VBoxContainer/button_continuar" to="." method="_on_button_continuar_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/button_menu_principal" to="." method="_on_button_menu_principal_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/button_sair" to="." method="_on_button_sair_pressed"]
